--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <title>Не вір своїм очам</title>
     <meta name="description" content="Чи можете ви завжди довіряти вашим очам?
     Оптичні ілюзії змушують сприймати світ по-іншому.Досліджуйте нашу галерею!">
-    <meta name="keywords" content="Галерея,оптичні ілюзії,наука,мистецтво,критичне мислення,зір,сприйняття">
-    <meta name="og:title" content="Не вір своїм очам">
-    <meta name="og:description" content="Чи можете ви завжди довіряти вашим очам?
+    <meta property="keywords" content="Галерея,оптичні ілюзії,наука,мистецтво,критичне мислення,зір,сприйняття">
+    <meta property="og:title" content="Не вір своїм очам">
+    <meta property="og:description" content="Чи можете ви завжди довіряти вашим очам?
     Оптичні ілюзії змушують сприймати світ по-іншому.Досліджуйте нашу галерею!">
+    <meta property="og:image" content="https://sourtaras.github.io/Lesson6.8/завантаження55.jpg">
+    <meta property="og:url" content="https://sourtaras.github.io/Lesson6.8/">
+    <meta property="og:type" content="website">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
